# llm-proxy

./: .dockerignore  Cargo.toml  DESIGN.md  Dockerfile  PLAN.md  README.md  README.zh-CN.md  TESTING.md  TODO.md
.github/workflows/: ci.yml  docker.yml
example/: azure-with-proxy-auth.toml  claude-code-via-responses.toml  codex-via-anthropic.toml  failover-two-backends.toml
memory/: claude_plan.md
src/: config.rs  error.rs  main.rs  metrics.rs  observability.rs
src/ir/: event.rs  message.rs  mod.rs  request.rs
src/protocol/: capability.rs  mod.rs  tool_ids.rs
src/provider/: anthropic_backend.rs  anthropic_cache.rs  backend_request.rs  deepseek.rs  failover.rs  mod.rs  responses_backend.rs  router.rs
src/reasoning/: envelope.rs  mod.rs
src/snapshots/: llm_proxy__tests__m7_chain2_anthropic_to_responses_reasoning_tool_first_turn_json.snap  llm_proxy__tests__m7_chain2_anthropic_to_responses_reasoning_tool_second_turn_json.snap  llm_proxy__tests__m7_chain2_anthropic_to_responses_reasoning_tool_sse.snap  llm_proxy__tests__m7_chain4_responses_to_anthropic_reasoning_tool_first_turn_json.snap  llm_proxy__tests__m7_chain4_responses_to_anthropic_reasoning_tool_second_turn_json.snap  llm_proxy__tests__m7_chain4_responses_to_anthropic_reasoning_tool_sse.snap  llm_proxy__tests__messages_route_plain_text_anthropic_sse.snap  llm_proxy__tests__messages_route_reasoning_anthropic_sse.snap  llm_proxy__tests__messages_route_tool_use_multiturn_anthropic_sse.snap  llm_proxy__tests__responses_route_plain_text_sse.snap  llm_proxy__tests__responses_route_tool_use_multiturn_sse.snap
(+23 files in other folders)
