[package]
name = "llm-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
async-stream = "0.3.6"
axum = "0.8.9"
base64 = "0.22.1"
bytes = "1.12.0"
crc32fast = "1.5.0"
eventsource-stream = "0.2.3"
futures = "0.3.32"
futures-util = "0.3.32"
httpdate = "1.0.3"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "query", "stream", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
toml = "0.9.8"
tower = "0.5.3"
tower-http = { version = "0.7.0", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
insta = "1.48.0"
tokio-test = "0.4.5"
wiremock = "0.6.5"
